# range-ex

./: .pre-commit-config.yaml  Pipfile  README.md  pyproject.toml  setup.py
.github/workflows/: python-publish.yml  tests.yml
docs/: index.md
range_ex/: __init__.py  range_regex.py  regex_generator.py
scripts/: print_examples.py
test/: test_regex_generator.py
tests/: test_range_regex.py
